@startuml
'https://plantuml.com/class-diagram

class MainPerso

interface Jeu{
+evoluer(Commande commandeUser)
+etreFini(): boolean
}

abstract Personnage{
#pos: Position
#vie: int
+Personnage(int x, int y, int vie)
+getPos(): Position
+getVie(): int
}

class Hero{
+Hero()
+getPos(): Postion
+deplacer()
}

class Labyrinthe{
-grille: char[][]
-hero:Hero
+Labyrinth(String fichier)
+estLibre(int x, int y): boolean
+getGrille(): char[][]
+getHero(): Hero
}

class LabyrintheDessin{
-jeu: PersoJeu
+LabyrintheDessin(JeuPerso j)
+dessiner(BufferedImage image)
}

interface DessinJeu{
+dessiner(BufferedImage im)
}

class JeuPerso{
-labyrinthe: Labyrinthe
-hero: Hero
+JeuPerso(Labyrinthe labyrinthe)
+evoluer(Commande c)
+etreFini(): boolean
+getLabyrinthe(): labyrinthe
+getHero():  Hero
}

class Position{
-x: int
-y: int
+getX(): int
+getY(): int
}

Hero --|> Personnage
Personnage --> MainPerso
Labyrinthe --> MainPerso

JeuPerso..>Jeu
LabyrintheDessin-->MainPerso
JeuPerso-->MainPerso
Position<--Personnage
JeuPerso-->Hero

DessinJeu<.. LabyrintheDessin


@enduml